// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Object matching of createAllRandomAddress Match to object Match to snapshot should create a address, when company the isCompany is false 1`] = `
{
  "city": Any<String>,
  "company": undefined,
  "country": Any<String>,
  "name": Any<String>,
  "street": Any<String>,
  "zipCode": Any<String>,
}
`;

exports[`Object matching of createAllRandomAddress Match to object Match to snapshot should create a address, when company the isCompany is true 1`] = `
{
  "city": Any<String>,
  "company": Any<String>,
  "country": Any<String>,
  "name": Any<String>,
  "street": Any<String>,
  "zipCode": Any<String>,
}
`;

exports[`Object matching of createPartiallyStaticAddress Match to object Match to snapshot should create a address, when company the isCompany is false 1`] = `
{
  "city": "Prague",
  "company": undefined,
  "country": "Czech Republic",
  "name": Any<String>,
  "street": Any<String>,
  "zipCode": "11000",
}
`;

exports[`Object matching of createPartiallyStaticAddress Match to object Match to snapshot should create a address, when company the isCompany is true 1`] = `
{
  "city": "Prague",
  "company": "Alza",
  "country": "Czech Republic",
  "name": Any<String>,
  "street": Any<String>,
  "zipCode": "11000",
}
`;

exports[`Object matching of createStaticAddress Match to snapshot should create a address, when company the isCompany is false 1`] = `
{
  "city": "Prague",
  "company": undefined,
  "country": "Czech Republic",
  "name": "Prokop Buben",
  "street": "Dlouha trida 1",
  "zipCode": "11000",
}
`;

exports[`Object matching of createStaticAddress Match to snapshot should create a address, when company the isCompany is true 1`] = `
{
  "city": "Prague",
  "company": "Alza",
  "country": "Czech Republic",
  "name": "Prokop Buben",
  "street": "Dlouha trida 1",
  "zipCode": "11000",
}
`;
